function(test_single_c_file file)
    add_executable(cli_val_${file} ${file}.c)
    target_link_libraries(cli_val_${file} PRIVATE cli_val cli_assembler cli_parser otrap)
    add_test(NAME cli_val_${file} COMMAND cli_val_${file})
endfunction()

test_single_c_file(add)
test_single_c_file(cmp)
test_single_c_file(filter-compare-prev)
test_single_c_file(filter-compare)
test_single_c_file(integer-endianness)
test_single_c_file(parse-bin-invalid-ascii)
test_single_c_file(parse-bin-valid-ascii)
test_single_c_file(parse-invalid-ascii)
test_single_c_file(parse-valid-ascii)
test_single_c_file(parse)
test_single_c_file(print)
test_single_c_file(sub)
