function(test_single_c_file file)
    add_executable(proctal_cli_val_${file} ${file}.c)
    target_link_libraries(proctal_cli_val_${file} PRIVATE proctal_cli_val proctal_cli_assembler proctal_cli_parser proctal_otrap)
    add_test(NAME proctal_cli_val_${file} COMMAND proctal_cli_val_${file})
endfunction()

test_single_c_file(add)
test_single_c_file(cmp)
test_single_c_file(filter-compare-prev)
test_single_c_file(filter-compare)
test_single_c_file(integer-endianness)
test_single_c_file(parse-bin-invalid-ascii)
test_single_c_file(parse-bin-valid-ascii)
test_single_c_file(parse-invalid-ascii)
test_single_c_file(parse-valid-ascii)
test_single_c_file(parse)
test_single_c_file(print)
test_single_c_file(sub)
